AutoCompleteの初期設定修正

--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -55,7 +55,7 @@
                         <div th:each="updatePlaceForm, placeStatus : ${updatePlaceList}">
                             <th:block th:replace="~{fragment/update-modal :: placesUpdateToggle(${placeStatus.index}, ${updatePlaceForm}, ${isCreateRoute})}"/>
                         </div>
-                        <!-- 目的地追加 経路生成前に表示 -->
+                        <!-- 経路生成前の目的地追加表示 -->
                         <th:block th:if="${!isCreateRoute}" th:insert="~{fragment/modal :: placesToggle(placeNum)}"/>
                     </div>
                     <!-- 終了地点 -->
@@ -65,7 +65,7 @@
                         <th:block th:if="${endPlaceForm}" th:insert="~{fragment/modal :: end}"/>
                         <th:block th:if="${updateEndForm}" th:insert="~{fragment/update-modal :: endUpdateToggle(${updateEndForm})}"/>
                     </div>
-                    <!-- 目的地追加 経路生成後に表示 -->
+                    <!-- 経路生成後の目的地追加表示 -->
                     <div th:if="${isCreateRoute}" class="addPlaces">
                         <th:block th:replace="~{fragment/modal :: placesToggle(placeNum)}"/>
                     </div>
