[refactor] 再送信の処理作成
- mailを引数にリダイレクトをかけてるだけ

--- a/src/main/resources/templates/user/edit/email/send.html
+++ b/src/main/resources/templates/user/edit/email/send.html
@@ -8,12 +8,13 @@
     <div class="my-16 text-center sm:text-xl text-sm w-3/4">
         <p class="my-2">新しいメールアドレス宛に、メールアドレス編集を完了するためのリンクを送信しました</p>
         <p class="my-2">メールに記載されているご案内に従い、本登録を完了させてください</p>
-        <!--/*@thymesVar id="email" type="java.lang.String"*/-->
         <span class="sm:text-2xl text-lg font-medium my-2" th:text="${email}"></span>
         <p class="my-2">メールが届かない場合は再送信を押してください</p>
     </div>
-    <!--    TODO:onclickの処理を記述-->
-    <button type="button" class="button-primary" style="max-width: 7.375rem" onclick="">再送信</button>
+    <form th:action="@{/user/edit/email/send}" method="post">
+        <input type="hidden" name="email" th:value="${email}">
+        <button type="submit" class="button-primary" style="max-width: 7.375rem">再送信</button>
+    </form>
 </main>
 
 <th:block th:replace="~{fragment/footer :: footer}"/>
