--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -43,6 +43,7 @@
                 </form>
             </li>
         </ul>
+        <div class="fixed top-0 left-0 w-full h-full bg-black bg-opacity-50 z-20 hidden" id="overlay"></div>
     </header>
 </th:block>
 </body>
