--- a/src/main/resources/templates/plan/list.html
+++ b/src/main/resources/templates/plan/list.html
@@ -9,10 +9,12 @@
             <h1 class="text-xl sm:text-title">旅行プラン一覧</h1>
             <p class="text-xs sm:text-base font-light">今まで作成した旅行プランを閲覧できます。</p>
         </div>
-        <div class="absolute right-10 top-6 text-center hidden md:block">
+        <!-- PC表示 -->
+        <div class="absolute right-10 top-6 text-center hidden md:block" th:if="${!planList.isEmpty()}">
             <a th:href="@{/plan/create}" class="button-primary">プラン作成</a>
         </div>
-        <div class="flex justify-center text-center my-10 md:hidden">
+        <!-- スマホ表示 -->
+        <div class="flex justify-center text-center my-10 md:hidden" th:if="${!planList.isEmpty()}">
             <a th:href="@{/plan/create}" class="button-primary">プラン作成</a>
         </div>
     </div>
@@ -33,48 +35,42 @@
             </a>
         </div>
     </div>
+    <div th:if="${planList.isEmpty()}" class="text-center text-base sm:text-2xl my-10">
+        <p>まだ旅行プランが作られていません。</p>
+        <p class="mt-2 mb-10">旅行プランを作成しましょう！！</p>
+        <a th:href="@{/plan/create}" class="button-primary text-sm sm:text-lg">プラン作成</a>
+    </div>
     <!-- TODO:バックエンドの一覧表示の処理ができたら作成する -->
-    <nav class="flex justify-center" aria-label="Page navigation example">
+    <nav th:if="${!planList.isEmpty()}" class="flex justify-center" aria-label="Page navigation example">
         <ul class="flex items-center -space-x-px h-10 text-base">
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-interactive hover:text-white">
+                <a href="#" class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-interactive hover:text-white">
                     <span class="sr-only">Previous</span>
-                    <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                         fill="none" viewBox="0 0 6 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="M5 1 1 5l4 4"/>
+                    <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 1 1 5l4 4"/>
                     </svg>
                 </a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">1</a>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">1</a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">2</a>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">2</a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">3</a>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">3</a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">4</a>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">4</a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">5</a>
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 hover:bg-interactive hover:text-white">5</a>
             </li>
             <li>
-                <a href="#"
-                   class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-interactive hover:text-white">
+                <a href="#" class="flex items-center justify-center px-4 h-10 leading-tight text-gray-500 bg-white border border-gray-300 rounded-e-lg hover:bg-interactive hover:text-white">
                     <span class="sr-only">Next</span>
-                    <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"
-                         fill="none" viewBox="0 0 6 10">
-                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                              d="m1 9 4-4-4-4"/>
+                    <svg class="w-3 h-3 rtl:rotate-180" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                     </svg>
                 </a>
             </li>
